--- a/DairyManagementSystem/src/DairyManagement.UI/Views/UserManagementView.xaml
+++ b/DairyManagementSystem/src/DairyManagement.UI/Views/UserManagementView.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="800">
-    <Grid Padding="20">
+    <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
